// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-import-interop-only doesn't wrap named imports 1`] = `
"import { f } from \\"mod\\";
console.log(f);"
`;

exports[`babel-plugin-import-interop-only with typescript doesn't wrap named imports 1`] = `
"import { f } from \\"mod\\";
console.log(f);"
`;

exports[`babel-plugin-import-interop-only with typescript doesn't wrap type imports (default imports) 1`] = `"export {};"`;

exports[`babel-plugin-import-interop-only with typescript doesn't wrap type imports (named default imports) 1`] = `"export {};"`;

exports[`babel-plugin-import-interop-only with typescript doesn't wrap type imports (named default imports, individual specification) 1`] = `"export {};"`;

exports[`babel-plugin-import-interop-only with typescript doesn't wrap type imports (namespace imports) 1`] = `"export {};"`;

exports[`babel-plugin-import-interop-only with typescript wraps default imports 1`] = `
"const _f = _interopRequireDefault(f);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

import f from \\"mod\\";
console.log(_f.default);"
`;

exports[`babel-plugin-import-interop-only with typescript wraps named default imports 1`] = `
"const _f = _interopRequireDefault(f);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

import { default as f } from \\"mod\\";
console.log(_f.default);"
`;

exports[`babel-plugin-import-interop-only with typescript wraps namespace imports 1`] = `
"const _M = _interopRequireDefault(M);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

import * as M from \\"mod\\";
console.log(_M.default);"
`;

exports[`babel-plugin-import-interop-only wraps default imports 1`] = `
"const _f = _interopRequireDefault(f);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

import f from \\"mod\\";
console.log(_f.default);"
`;

exports[`babel-plugin-import-interop-only wraps named default imports 1`] = `
"const _f = _interopRequireDefault(f);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

import { default as f } from \\"mod\\";
console.log(_f.default);"
`;

exports[`babel-plugin-import-interop-only wraps namespace imports 1`] = `
"const _M = _interopRequireDefault(M);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

import * as M from \\"mod\\";
console.log(_M.default);"
`;
